--- a/game-dino/index.html
+++ b/game-dino/index.html
@@ -8,6 +8,7 @@
     <title>Dino - Game</title>
 </head>
 <body>
+    <h3 class="pontuacao">SCORE: 0</h3>
     <div class="background">
         <div class="dino"></div>
     </div>
